--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 python-dotenv
 langchain-core
 langchain-community
+langchain-huggingface
 faiss-cpu
 langchain-text-splitters
 duckduckgo-search
+gradio
